wiki: Fix sep not rendering on mobile.

--- a/r2/r2/public/static/css/wiki_compact.less
+++ b/r2/r2/public/static/css/wiki_compact.less
@@ -111,7 +111,7 @@
     .sep {
         border-right: 1px dashed black;
         opacity: .5;
-        width: 0;
+        width: 1px;
         margin-right: 2px;
         margin-left: 2px;
     }
